added onClick text overlay on pictures - working on button styling in css

--- a/src/index.css
+++ b/src/index.css
@@ -2,26 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: whitesmoke;
 }
 
-.gallery{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-content: space-around;
-  gap: 20px 20px;
-}
-
-.photoBox{
-  width: 100px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.photo{
-  width: 100px;
-  height: 100px;
-  border: 1px solid transparent;
-  border-radius: 10px;
+head {
+  height: 0;
+  width: 0;
 }
