--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,11 +1,17 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
 }
 
 .App-header {
-  background-color: #222;
+  font-family: fantasy;
+  font-size: 2em;
+  background-color: rgb(64, 121, 140);
   padding: 1em;
-  color: white;
+  color: rgb(11, 32, 39);
   margin-bottom: 1em;
 }
 
@@ -13,3 +19,81 @@
   font-size: 1.5em;
 }
 
+h1 {
+  margin: 0;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: space-around;
+  gap: 50px 20px;
+  margin: auto;
+  width: 75%;
+  background-color: whitesmoke;
+  align-items: flex-start;
+}
+
+.photoBox {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.photo {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(64, 121, 140, .25);
+  margin: auto;
+  box-shadow: 0 0 10px rgb(11, 32, 39, .5);
+}
+
+.photo:hover {
+  transform: scale(3);
+  transition-duration: 1s;
+  backdrop-filter: blur(2px);
+}
+
+.tag {
+  font-size: 1vh;
+  width: 100%;
+  font-display: auto;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+  position: absolute;
+  opacity: 1;
+  backdrop-filter: blur(1px);
+  color: whitesmoke;
+  border: 1px solid transparent;
+  border-radius: 0 0 10px 10px;
+  align-self: flex-end;
+}
+
+button {
+  width: 100px;
+  margin: auto;
+  border-radius: 5px;
+  border-color: rgb(64, 121, 140);
+  background-color: rgba(64, 121, 140, 0.5);
+  color: rgb(64, 121, 140);
+  border-style: outset;
+}
+
+button:hover {
+  transition-duration: 1s;
+  background-color: rgba(64, 121, 140);
+  color: whitesmoke;
+}
+
+
+/* p{
+  font-family: fantasy;
+} */
