--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -75,6 +75,7 @@ h1 {
   border: 1px solid transparent;
   border-radius: 0 0 10px 10px;
   align-self: flex-end;
+  transition-duration: 1s;
 }
 
 button {
@@ -85,15 +86,16 @@ button {
   background-color: rgba(64, 121, 140, 0.5);
   color: rgb(64, 121, 140);
   border-style: outset;
+  box-shadow: 0 0 10px rgb(11, 32, 39, .5);
 }
 
 button:hover {
   transition-duration: 1s;
+  border-color: rgb(11, 32, 39);
   background-color: rgba(64, 121, 140);
   color: whitesmoke;
 }
 
-
-/* p{
+p{
   font-family: fantasy;
-} */
+}
